# deep-learning-toolbox

./: .gitignore  pyproject.toml  requirements.txt
docs/: filters.md
script/: create_homogeneous_audio_dataset.py  create_homogeneous_dataset.py  create_homogeneous_image_dataset.py  plot_filters.py
src/dltoolbox/: dataset.py  errors.py  evaluation.py  filters.py  ioutils.py  logger.py  multiprocess.py  normalization.py  training.py  transforms.py  utils.py
src/dltoolbox/dataset/: _utils.py  create.py  errors.py  h5_dataset.py  h5_dataset_disk.py  h5_dataset_memory.py  h5dataset.py  metadata.py
src/dltoolbox/dataset/metadata/: _utils.py  dataset_metadata.py  eager_sample_meta_store.py  isample_meta_store.py  lazy_sample_meta_store.py  resolvable_sample_meta.py  sample_meta_decoder.py  sample_meta_protocols.py
src/dltoolbox/images/: crop.py  scale.py
src/dltoolbox/io/: binary_string_file.py
src/dltoolbox/transforms/: __init__.py  _image_utils_np.py  _utils.py  audio.py  core.py  frequency.py  image.py  random.py  universal.py
src/dltoolbox/transforms/frequency/: __init__.py  fourier.py
tests/: test_binary_string_file.py  test_dataset.py  test_dataset_metadata.py  test_image_utils_np.py  test_images_crop.py  test_images_scale.py  test_ioutils_read_image.py  test_normalization.py  test_sample_meta_store.py  test_transforms.py  test_transforms_audio.py  test_transforms_core.py  test_transforms_frequency.py  test_transforms_image.py  test_transforms_universal.py  utils.py
tests/dataset/: test_create.py  test_dataset.py  test_dataset_metadata.py  test_resolvable_sample_meta.py  test_sample_meta_decoder.py  test_sample_meta_store.py  test_utils.py
