[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dltoolbox"
version = "0.0.1"
description = "Deep Learning Toolbox"
#license = "LICENSE"
#readme = "README.md"
authors = [
  { name = "Niclas Pillath", email = "npillath@stimlabs.dev" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Environment :: GPU :: NVIDIA CUDA",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = [
    "deep",
    "learning",
    "toolbox",
]
requires-python = ">=3.12"
dependencies = [
    "h5py",
    "numpy",
    "opencv-python-headless",
    "pillow",
    "psutil",
    "scipy",
    "soundfile",
    "soxr",
    "torch>=2.1.2",
    "torchaudio",
    "torchvision",
]

[project.optional-dependencies]
cpu = [
    "torch>=2.1.2",
    "torchvision",
]
cu130 = [
    "torch>=2.1.2",
    "torchvision",
]
dev = [
    "pytest",
    "ruff",
]

[tool.uv]
environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu130" },
  ],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu130", extra = "cu130", marker = "sys_platform != 'darwin'" },
]
torchvision = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu130", extra = "cu130", marker = "sys_platform != 'darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.pytest.ini_options]
pythonpath = ["src"]
python_files = "test*.py"

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = false

[tool.ruff.format]
skip-magic-trailing-comma = true
